--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,8 @@
 <body>
 <script th:src="@{jquery-1.10.2.min.js}" type="text/javascript"></script>
 <script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
+<h1>Index Page</h1>
+<h2>Hello SpringBoot</h2>
+<h2>Hello Thymeleaf</h2>
 </body>
 </html>
